<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/media_play_ll"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" 
    android:background="@drawable/spring_a" >
    
	<LinearLayout
	    android:id="@+id/info_text_ll"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="6"
		android:gravity="center"
		android:orientation="vertical" >
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="2"
			android:orientation="vertical"  >
		
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:orientation="vertical"  >
		    
				<TextView
					android:id="@+id/audio_title_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/audio_title_title"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="#003366"
					android:background="#60FFCC00" />
			    
				<TextView
					android:id="@+id/audio_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
			        android:singleLine="true" 
			        android:ellipsize="end"
			        android:marqueeRepeatLimit ="marquee_forever"
			        android:scrollHorizontally="true"
			        android:textSize="36sp"
				    android:textColor="#FF0000"
				    android:background="#60FFCC00" />
			
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:orientation="vertical" >
			
				<TextView
					android:id="@+id/audio_info_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/audio_info_title"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="#003366"
					android:background="#60FFCC00" />
			    
				<TextView
					android:id="@+id/audio_name_meta_data"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
			        android:singleLine="true" 
			        android:ellipsize="end"
			        android:marqueeRepeatLimit ="marquee_forever"
			        android:scrollHorizontally="true"
			        android:textSize="36sp"
				    android:textColor="#FF0000"
				    android:background="#60FFCC00" />
    
			</LinearLayout>
				
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="2"
				android:orientation="vertical" >
			
				<TextView
					android:id="@+id/media_player_info_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/media_player_info_title"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="#003366"
					android:background="#60FFCC00" />
			
				<TextView
					android:id="@+id/looping_info"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
			        android:singleLine="true" 
			        android:ellipsize="end"
			        android:marqueeRepeatLimit ="marquee_forever"
			        android:scrollHorizontally="true"
			        android:textAppearance="?android:attr/textAppearanceLarge"
				    android:textColor="#FF0000"
				    android:background="#60FFCC00" />
				
				<TextView
					android:id="@+id/random_info"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
			        android:singleLine="true" 
			        android:ellipsize="end"
			        android:marqueeRepeatLimit ="marquee_forever"
			        android:scrollHorizontally="true"
			        android:textAppearance="?android:attr/textAppearanceLarge"
				    android:textColor="#FF0000"
				    android:background="#60FFCC00" />
				
			</LinearLayout>
				
		</LinearLayout>
    
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/seek_bar_ll"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1" >
		
		<SeekBar
			android:id="@+id/seek_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/time_field_ll"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1" >

		<RelativeLayout
		    android:layout_width="match_parent" 
		    android:layout_height="match_parent">
		
			<TextView
		 		android:id="@+id/start_time_field"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true" 
				android:text="@string/inital_Time"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="#003366"
				android:background="#60FFCC00" />
		
			<TextView
				android:id="@+id/end_time_field"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:layout_alignParentRight="true" 
				android:text="@string/inital_Time"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="#003366"
				android:background="#60FFCC00" />
		
		</RelativeLayout>
	    
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/button_1_ll"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal" >
	
		<ImageButton
			android:id="@+id/previous_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@android:drawable/ic_media_previous" />
	    
		<ImageButton
			android:id="@+id/rewind_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@android:drawable/ic_media_rew" />

		<ImageButton
			android:id="@+id/play_push_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@android:drawable/ic_media_play" />

		<ImageButton
			android:id="@+id/forward_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@android:drawable/ic_media_ff" />
		
		<ImageButton
			android:id="@+id/next_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@android:drawable/ic_media_next" />
		
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/button_2_ll"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal" >
		
		<ImageButton
			android:id="@+id/loop_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@android:drawable/ic_menu_revert" />
		
		<ImageButton
			android:id="@+id/extend_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@android:drawable/btn_plus" />
		
		<ImageButton
			android:id="@+id/random_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@android:drawable/ic_menu_help" />
		
		<ImageButton
			android:id="@+id/loop_button4"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:visibility="invisible"
			android:src="@android:drawable/ic_menu_revert" />
		
		<ImageButton
			android:id="@+id/loop_button5"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:visibility="invisible"
			android:src="@android:drawable/ic_menu_revert" />
		
	</LinearLayout>
</LinearLayout>
   

